# hestia

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  core_models.py  db.py  deps.py  main.py  settings.py  util.py
app/auth/: __init__.py  principals.py  providers.py
app/integrations/: __init__.py  base.py  bring.py  fake.py  gmail.py  google_calendar.py
app/mcp/: __init__.py  audit.py  auth.py  help.py  server.py
app/modules/: __init__.py  base.py
app/modules/_template/: __init__.py  mcp.py  models.py  router.py  schemas.py  service.py
app/modules/dogs/: __init__.py  mcp.py  models.py  router.py  schemas.py  service.py
app/modules/feature_requests/: __init__.py  mcp.py  models.py  router.py  schemas.py  service.py
app/modules/projects/: __init__.py  mcp.py  models.py  router.py  schemas.py  service.py
app/modules/subscriptions/: __init__.py  mcp.py  models.py  router.py  schemas.py  service.py
app/modules/tiles/: __init__.py  (+5 more)
deploy/: install.sh  uninstall.sh
deploy/cloudflared/: ingress.hestia.yaml
deploy/systemd/: hestia-api.service  hestia-mcp.service
docs/: AGENT.md  ANTIPATTERNS.md  DECISIONS.md  DEPLOY.md  FAILURES.md  HANDOFF.md  STATE.md  VOCABULARY.md
scripts/: new_module.py  seed.py
tests/: conftest.py  test_auth.py  test_dashboard.py  test_dogs.py  test_feature_requests.py  test_integrations.py  test_mcp.py  test_mcp_hardening.py  test_projects.py  test_registry.py  test_scaffold.py  test_settings.py  test_subscriptions.py  test_tiles.py  test_vehicles.py
(+7 files in other folders)
