[project]
name = "hestia"
version = "0.1.0"
description = "Modular household dashboard, fillable by an agent or a human."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Roberto Novara" }]

dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "sqlalchemy>=2.0.51",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-multipart>=0.0.32",
    "python-dateutil>=2.9",
    "httpx>=0.28",
    "mcp>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
]

[project.scripts]
hestia-seed = "scripts.seed:seed"
hestia-mcp = "app.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx`:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
